# ipe_collection_md_builder

./: .gitignore  MANIFEST.in  README.md  config.toml  documentation.py  example_generator.py  ipecol.py  jinja_helper.py  pyproject.toml  renderhints.json  setup.py
src/ipecol/: documentation.py  example_generator.py  ipecol.py  jinja_helper.py
src/ipecol/templates/: arrow.jinja2  color.jinja2  dashstyle.jinja2  decoration.jinja2  documentation.jinja2  ipetemplate.jinja2  mark.jinja2  segment.jinja2  textstyle.jinja2
templates/: dashstyle.jinja2  documentation.jinja2  ipetemplate.jinja2
